Add loans list method
