# src/main/resources/swagger/api-docs.json
@@ -222,7 +222,7 @@
         ],
         "responses": {
           "200": {
-            "description": "An paged array of pets",
+            "description": "Successful operation",
             "headers": {
               "x-next": {
                 "type": "string",
@@ -371,6 +371,45 @@
           }
         }
       }
+    },
+    "/loans": {
+      "get": {
+        "summary": "List all loans",
+        "operationId": "listBookLoans",
+        "tags": [
+          "Book Loans"
+        ],
+        "parameters": [
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "How many items to return at one time (max 100)",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "headers": {
+              "x-next": {
+                "type": "string",
+                "description": "A link to the next page of responses"
+              }
+            },
+            "schema": {
+              "$ref": "#/definitions/Loans"
+            }
+          },
+          "default": {
+            "description": "unexpected error",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -381,7 +420,8 @@
         "surname",
         "documentNumber",
         "age",
-        "gender"
+        "gender",
+        "status"
       ],
       "properties": {
         "id": {
@@ -448,7 +488,8 @@
         "id",
         "title",
         "author",
-        "editorial"
+        "editorial",
+        "status"
       ],
       "properties": {
         "id": {
@@ -492,6 +533,40 @@
       "type": "array",
       "items": {
         "$ref": "#/definitions/Book"
+      }
+    },
+    "Loans": {
+      "required": [
+        "id",
+        "userId",
+        "bookId",
+        "LoanDate",
+        "bookReturnDate",
+        "status"
+      ],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "userId": {
+          "type": "string"
+        },
+        "bookId": {
+          "type": "string"
+        },
+        "LoanDate": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "bookReturnDate": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "status": {
+          "type": "integer",
+          "format": "int64"
+        }
       }
     },
     "Error": {
